--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Tata Usaha SDIT DAARUL HASANAH</h1>
+    <h1>SDIT DAARUL HASANAH</h1>
     <nav>
       <a href="index.html">Beranda</a>
       <a href="berita.html">Berita</a>
